wifi: take the bridge paramerer as the input and pass it to wpa_supplicant
Issue If the WLAN interface is part of a bridge, we need to pass the bridge interface name to wpa_supplicant, otherwise, EAPOL frames will not be received and network manager cannot connect to secured WLAN network.
Details of the issue are https://www.spinics.net/lists/linux-wireless/msg177197.html
Proposed Solution:
After digging through the source, realized that in the function "on_wpas_proxy_acquired()" we are passing "Driver" and "Ifname" to wpa_supplicant DBUS interface, we also should pass "BridgeIfName" as well. But this needs a change in UI to take the bridge name as a param (or) we could automatically parse the bridge config (brutils) and see which bridge interface the WLAN interface is part of.